--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>London Trip</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="London Eye by night">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="Thames river by night">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Big Ben by night">
+        <hr>
+    </header>
+    <!--End of header-->
+    <main></main>
+    <footer></footer>
 </body>
 </html>
