--- a/index.html
+++ b/index.html
@@ -14,7 +14,60 @@
         <hr>
     </header>
     <!--End of header-->
-    <main></main>
-    <footer></footer>
+    <main>
+        <section>
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <!--Table head-->
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                </tbody>
+                <!--Table body-->
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360&euro;</td>
+                    </tr>
+                </tfoot>
+                <!--Table foot-->
+            </table>
+            <!--End Table-->
+            <hr>
+        </section>
+        <section>
+            <h3>Cose da fare</h3>
+            <hr>
+        </section>
+        <section>
+            <h3>Info utili</h3>
+            <hr>
+        </section>
+    </main>
+    <footer>
+        <h3>Le foto</h3>
+
+    </footer>
 </body>
 </html>
