--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
         </section>
         <section>
             <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare greenwich &check;</li>
+                <li>Ascoltare un rtista di strada a Covent Garden &check;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+            </ul>
+            <!--To do list-->
             <hr>
         </section>
         <section>
