--- a/index.html
+++ b/index.html
@@ -99,5 +99,6 @@
         <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Thames river, Tower Bridge and Parliament by night">
         <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Thames river and Tower bridge by night">
     </footer>
+    <!--End of footerS-->
 </body>
 </html>
